k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cicd-poc
  labels:
    name: cicd-poc
    app: cicd-poc-app
